task-03: в gateway добавлен метод получения всех досок
