# shared/pkg/openapi/gateway/v1/oas_router_gen.go
@@ -59,10 +59,12 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 			if len(elem) == 0 {
 				// Leaf node.
 				switch r.Method {
+				case "GET":
+					s.handleBoardGetAllRequest([0]string{}, elemIsEscaped, w, r)
 				case "POST":
 					s.handleBoardCreateRequest([0]string{}, elemIsEscaped, w, r)
 				default:
-					s.notAllowed(w, r, "POST")
+					s.notAllowed(w, r, "GET,POST")
 				}
 
 				return
@@ -164,6 +166,15 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 			if len(elem) == 0 {
 				// Leaf node.
 				switch method {
+				case "GET":
+					r.name = BoardGetAllOperation
+					r.summary = "Получение досок"
+					r.operationID = "BoardGetAll"
+					r.operationGroup = ""
+					r.pathPattern = "/api/v1/boards"
+					r.args = args
+					r.count = 0
+					return r, true
 				case "POST":
 					r.name = BoardCreateOperation
 					r.summary = "Создание доски"
