# shared/pkg/openapi/gateway/v1/oas_validators_gen.go
@@ -1,0 +1,15 @@
+// Code generated by ogen, DO NOT EDIT.
+
+package gateway_v1
+
+import (
+	"github.com/go-faster/errors"
+)
+
+func (s GetAllBoardResponse) Validate() error {
+	alias := ([]GetAllBoardResponseItem)(s)
+	if alias == nil {
+		return errors.New("nil is invalid value")
+	}
+	return nil
+}
